# lidar_obstacle_detection

./: CMakeLists.txt  README.md  package.xml
include/: lidar_process.h
launch/: lidar_obstacle_detection.launch
src/: lidar_process.cpp  main.cpp
